tests/ui/repr/repr-align.stderr
error[E0589]: invalid `repr(align)` attribute: not an unsuffixed integer
  --> $DIR/repr-align.rs:3:14
   |
LL | #[repr(align(16.0))]
   |              ^^^^

error[E0589]: invalid `repr(align)` attribute: not a power of two
  --> $DIR/repr-align.rs:7:14
   |
LL | #[repr(align(15))]
   |              ^^

error[E0589]: invalid `repr(align)` attribute: larger than 2^29
  --> $DIR/repr-align.rs:11:14
   |
LL | #[repr(align(4294967296))]
   |              ^^^^^^^^^^

error[E0589]: invalid `repr(align)` attribute: not an unsuffixed integer
  --> $DIR/repr-align.rs:18:14
   |
LL | #[repr(align(16.0))]
   |              ^^^^

error[E0589]: invalid `repr(align)` attribute: not a power of two
  --> $DIR/repr-align.rs:22:14
   |
LL | #[repr(align(15))]
   |              ^^

error[E0589]: invalid `repr(align)` attribute: larger than 2^29
  --> $DIR/repr-align.rs:26:14
   |
LL | #[repr(align(4294967296))]
   |              ^^^^^^^^^^

error[E0589]: invalid `repr(align)` attribute: not an unsuffixed integer
  --> $DIR/repr-align.rs:3:14
   |
LL | #[repr(align(16.0))]
   |              ^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0589]: invalid `repr(align)` attribute: not a power of two
  --> $DIR/repr-align.rs:7:14
   |
LL | #[repr(align(15))]
   |              ^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0589]: invalid `repr(align)` attribute: larger than 2^29
  --> $DIR/repr-align.rs:11:14
   |
LL | #[repr(align(4294967296))]
   |              ^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0589]: invalid `repr(align)` attribute: not an unsuffixed integer
  --> $DIR/repr-align.rs:18:14
   |
LL | #[repr(align(16.0))]
   |              ^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0589]: invalid `repr(align)` attribute: not a power of two
  --> $DIR/repr-align.rs:22:14
   |
LL | #[repr(align(15))]
   |              ^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0589]: invalid `repr(align)` attribute: larger than 2^29
  --> $DIR/repr-align.rs:26:14
   |
LL | #[repr(align(4294967296))]
   |              ^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0589`.
